# data-quality-challenges-wearables

./: .gitignore  LICENSE  README.md  makefile  pyproject.toml
code_utils/: path_conf.py
code_utils/embraceplus/: __init__.py  nonwear.py  parse_avro.py
code_utils/empatica/: acc_processing.py  generic_processing.py  nonwear.py  processing_visualization.py  scl_processing.py
code_utils/etri/: dashboard.py  mapping_dicts.py  visualization.py
code_utils/mbrain/: dashboard.py  event_parsing.py  headaches.py  visualization.py
code_utils/utils/: dash_utils.py  dataframes.py  interaction_analysis.py  util.py  visualizations.py
loc_data/: df_headache_relevant.parquet
loc_data/EmbracePlus Data Sample/digital_biomarkers/: TSTSTUDY-TSTSITE-P0001_2022-06-04_eda.csv  TSTSTUDY-TSTSITE-P0001_2022-06-04_movement-intensity.csv
loc_data/EmbracePlus Data Sample/raw_data/: TSTSTUDY-TSTSITE-P0001_1654326591.avro  TSTSTUDY-TSTSITE-P0001_1654352541.avro
notebooks/: EmbracePlus.ipynb
notebooks/etri/: 0_parse_etri.ipynb  C1_participant_compliance.ipynb  C4_Wearable_wear_behavior.ipynb  C5_Wearable_off_wrist.ipynb  C6_Signal_processing.ipynb  README.md
notebooks/mBrain/: 1_interaction_rate_analysis.ipynb  2.0_Label_off_wrist.ipynb  2_Off_wrist.ipynb  3_Signal_processing.ipynb  C1_participant_compliance.ipynb  C4_Wearable_wear_behavior.ipynb  C5.1 Label_off_wrist.ipynb  C5.1_Label_off_wrist.ipynb  C5_wearable_off_wrist.ipynb  C6_Signal_processing.ipynb  C7_missing_data.ipynb
