[tool.poetry]
name = "data-quality-wearables"
version = "0.1"
description = "Adressing Data Quality Challenges in observational wearable monitoring studies"
authors = ["Jonas Van Der Donckt"]
readme = "README.md"
license = "imec"
repository = "https://github.com/predict-idlab/ts-datapoint-selection-vis"
documentation = "https://github.com/predict-idlab/ts-datapoint-selection-vis"
keywords = ["wearables", "real-life", "data quality", "examples", "monitoring", "ambulator studies"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
plotly-resampler = "0.9.1"
matplotlib = "^3.6.1"
scipy = "^1.9.2"
tqdm = "^4.64.1"
pyfunctional = "^1.4.3"
fastparquet = "^0.8.3"
pyarrow = "^10.0.0"
kaleido = "0.2.0"
dash-extensions = "^0.1.13"
dash-bootstrap-components = "^1.4.1"
tsflex = "^0.3.0"
memory-profiler = "^0.61.0"
line-profiler = "^4.0.3"
scikit-learn = "^1.3.0"
seaborn = "^0.12.2"


[tool.poetry.dev-dependencies]
black = "^22.6.0"
ipywidgets = "^7.7.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.7"
isort = "^5.12.0"

